crates/pg_syntax/tests/snapshots/postgres_regress/money@88.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 12345678901234567::int8::money;"
---
SelectStmt@0..38
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..37
    TypeCast@7..37
      TypeCast@7..30
        AConst@7..24
          Fconst@7..24 "12345678901234567"
        Typecast@24..26 "::"
        TypeName@26..30
          Ident@26..30 "int8"
      Typecast@30..32 "::"
      TypeName@32..37
        Ident@32..37 "money"
  Ascii59@37..38 ";"

