crates/pg_syntax/tests/snapshots/postgres_regress/money@89.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 12345678901234567::numeric::money;"
---
SelectStmt@0..41
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..40
    TypeCast@7..40
      TypeCast@7..33
        AConst@7..24
          Fconst@7..24 "12345678901234567"
        Typecast@24..26 "::"
        TypeName@26..33
          Numeric@26..33 "numeric"
      Typecast@33..35 "::"
      TypeName@35..40
        Ident@35..40 "money"
  Ascii59@40..41 ";"

