crates/pg_syntax/tests/snapshots/postgres_regress/money@95.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '92233720368547758.07'::money::numeric;"
---
SelectStmt@0..46
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..45
    TypeCast@7..45
      TypeCast@7..36
        AConst@7..29
          Sconst@7..29 "'92233720368547758.07'"
        Typecast@29..31 "::"
        TypeName@31..36
          Ident@31..36 "money"
      Typecast@36..38 "::"
      TypeName@38..45
        Numeric@38..45 "numeric"
  Ascii59@45..46 ";"

