crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@104.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM nummultirange_test WHERE multirange_overlaps_multirange(nmr, nummultirange(numrange(4.0, 4.2), numrange(6.0, 7.0)));"
---
SelectStmt@0..130
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..32
    Ident@14..32 "nummultirange_test"
  Whitespace@32..33 " "
  Where@33..38 "WHERE"
  Whitespace@38..39 " "
  FuncCall@39..126
    Ident@39..69 "multirange_overlaps_m ..."
    Ascii40@69..70 "("
    ColumnRef@70..73
      Ident@70..73 "nmr"
    Ascii44@73..74 ","
    Whitespace@74..75 " "
    FuncCall@75..126
      Ident@75..88 "nummultirange"
      Ascii40@88..89 "("
      FuncCall@89..106
        Ident@89..97 "numrange"
        Ascii40@97..98 "("
        AConst@98..101
          Fconst@98..101 "4.0"
        Ascii44@101..102 ","
        Whitespace@102..103 " "
        AConst@103..106
          Fconst@103..106 "4.2"
      Ascii41@106..107 ")"
      Ascii44@107..108 ","
      Whitespace@108..109 " "
      FuncCall@109..126
        Ident@109..117 "numrange"
        Ascii40@117..118 "("
        AConst@118..121
          Fconst@118..121 "6.0"
        Ascii44@121..122 ","
        Whitespace@122..123 " "
        AConst@123..126
          Fconst@123..126 "7.0"
  Ascii41@126..127 ")"
  Ascii41@127..128 ")"
  Ascii41@128..129 ")"
  Ascii59@129..130 ";"

